<resources>
    <string name="app_name">Porteiro Eletronico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_acessos">Acessos</string>
    <string name="title_cadastros">Cadastros</string>
    <string name="title_unidade">Unidade</string>
    <string name="top_bar_cadastros">Cadastrar novo acesso para</string>
    <string name="submenu_cadastrados">Cadastrados</string>
    <string name="submenu_administradores">Administradores</string>
    <string name="submenu_veiculos">Veiculos</string>
    <string name="plus">+</string>
    <string name="detalhes">Detalhes</string>
    <string name="header">Header</string>
    <string name="subheader">SubHeader</string>
    <string name="trailing">Trailing</string>
    <string name="aprovar">Aprovar</string>
    <string name="mais_detalhes">Mais Detalhes</string>
    <string name="top_bar_acessos">Solicitações Abertas</string>
    <string name="programados">Programados</string>
    <string name="ultimos_acessos">Últimos Acessos</string>
    <string name="date_example">17/04 • 14:00</string>
    <string name="editar">Editar</string>
    <string name="contatos">Contatos</string>
    <string name="contatos_nome">Nome do contato</string>
    <string name="contatos_numero">Numero do contato</string>
    <string name="seguranca">Segurança</string>
    <string name="biometria">Biometria</string>
    <string name="usar_biometria">Utilizar biometria do dispositivo</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="username">Username</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
</resources>