<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_acessos">

    <fragment
        android:id="@+id/navigation_acessos"
        android:name="com.example.porteiroeletronico.main.acessos.AcessosFragment"
        android:label="@string/title_acessos"
        tools:layout="@layout/fragment_acessos" />

    <fragment
        android:id="@+id/navigation_cadastros"
        android:name="com.example.porteiroeletronico.main.cadastros.CadastrosFragment"
        android:label="@string/title_cadastros"
        tools:layout="@layout/fragment_cadastros" />

    <fragment
        android:id="@+id/navigation_unidade"
        android:name="com.example.porteiroeletronico.main.unidade.UnidadeFragment"
        android:label="@string/title_unidade"
        tools:layout="@layout/fragment_unidade" />
</navigation>