<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="160dp"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/m3_primary_20"
        android:layout_width="328dp"
        android:layout_height="160dp">

        <TextView
            tools:text="@string/header"
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:textColor="@color/m3_white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            tools:text="@string/subheader"
            android:id="@+id/subhead"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:textColor="@color/m3_primary_95"
            android:textSize="12sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/header"/>

        <TextView
            tools:text="@string/trailing"
            android:id="@+id/trailing"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:textColor="@color/m3_primary_95"
            android:textSize="11sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/subhead"
            app:layout_constraintTop_toBottomOf="@+id/subhead"/>

        <ImageView
            android:id="@+id/tipo_cadastro_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="248dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aprovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColor="@color/m3_white"
            android:text="@string/aprovar"
            android:textSize="14sp"
            android:typeface="sans"
            android:letterSpacing="0"
            android:textAllCaps="false"
            app:cornerRadius="100dp"
            app:backgroundTint="@color/m3_background"
            app:layout_constraintStart_toStartOf="@+id/trailing"
            app:layout_constraintTop_toBottomOf="@+id/trailing" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:textColor="@color/m3_white"
            android:text="@string/mais_detalhes"
            android:textSize="14sp"
            android:typeface="sans"
            android:stateListAnimator="@null"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:backgroundTint="@color/m3_primary_20"
            app:layout_constraintStart_toEndOf="@+id/aprovar"
            app:layout_constraintTop_toBottomOf="@+id/trailing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>