<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop ="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".main.acessos.AcessosFragment">

    <TextView
        android:background="@color/m3_primary_30"
        android:id="@+id/text_cadastros"
        android:layout_height="24sp"
        android:layout_width="match_parent"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/top_bar_acessos"
        android:textColor="@color/m3_white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"/>

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/card_solicitacao_aberta"
        tools:itemCount="3"
        android:id="@+id/recycler_view_solicitacoes_abertas"
        android:background="@color/m3_primary_30"
        android:layout_height="208dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"/>

    <TextView
        android:background="@color/m3_white"
        android:id="@+id/text_programados"
        android:layout_height="40sp"
        android:layout_width="match_parent"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/programados"
        android:textColor="@color/m3_black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"/>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/m3_white"
        android:id="@+id/recycler_view_pessoas_cadastradas"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    <TextView
        android:background="@color/m3_white"
        android:id="@+id/text_ultimos_acessos"
        android:layout_height="40sp"
        android:layout_width="match_parent"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/ultimos_acessos"
        android:textColor="@color/m3_black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"/>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/m3_white"
        android:id="@+id/recycler_view_veiculos_cadastrados"
        android:layout_height="400dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="70dp"
        android:paddingBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

</LinearLayout>

</androidx.core.widget.NestedScrollView>